--- a/src/TeamBuildCard.css
+++ b/src/TeamBuildCard.css
@@ -2,6 +2,7 @@
   width: 160px;
   height: 200px;
   background-color: rgba(255,255,255,0.1);
+  color: rgb(0,0,0);
   justify-content: center;
   align-items: center;
   text-align: center;
