--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   background-color: rgb(40,40,40);
   color: rgb(220,220,220);
   text-align: center;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 nav a {
