--- a/src/PartyPokemon.css
+++ b/src/PartyPokemon.css
@@ -1,28 +1,54 @@
 .party-pokemon{
   display: grid;
-  grid-template: "image header" 2fr "image hp" 2fr / 1fr 4fr;
+  grid-template: "image header" 2fr "image hp" 2fr / 1fr 3fr;
   max-width: 600px;
   position: relative;
+  background-image: linear-gradient(-45deg,#777, #0000, #0000, #aaa, #ccc, #0000, #0000, #0000);
+  color: rgb(220,220,220);
+  -webkit-text-stroke: 1px #000;
+  text-transform: capitalize;
+  margin: 0.5em;
+  padding: 0.25em;
+}
+
+.party-pokemon-shader{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-image: linear-gradient(-45deg,#777, #0000, #0000, #aaa, #ccc, #0000, #0000, #0000);
+  -webkit-mask: linear-gradient(-45deg,#ff0, #0000);
+  mask: linear-gradient(-45deg,#ff0, #1111);
+  z-index: 0;
 }
 
 .party-pokemon h4{
   grid-area: header;
+  position: relative;
+  font-size: 24px;
+  margin: 1ch;
 }
 
 .party-pokemon .slot{
   grid-area: image;
   position: absolute;
+  color: white;
+  -webkit-text-stroke: 1px white;
+  left: 5px;
+  top: -15px;
 }
 
 .party-pokemon img{
   grid-area: image;
   width: 120px;
+  position: relative;
 }
 
 .party-pokemon .hp-bar{
   grid-area: hp;
+  position: relative;
 }
 
 .party-pokemon .hp-bar-shader{
   grid-area: hp;
+  position: relative;
 }
